# utils

./: README.md
127.0_send_recv/: a.out  client.c
cmake/01/: CMakeLists.txt  main.c  readme
cmake/02/: CMakeLists.txt  hello.c  readme
cmake/03/: CMakeLists.txt  main.c  readme
cmake/04/: .CMakeLists.txt.swp  CMakeLists.txt  hello.h  readme
cmake/05/: CMakeLists.txt  readme
cmake/05/hello1/: hello1.c
cmake/05/src/: CMakeLists.txt
cmake/06/: CMakeLists.txt  readme
cmake/06/hello1/: CMakeLists.txt  hello1.c
cmake/06/hello2/: hello2.h
cmake/06/src/: main.c
cmake/07/: readme
cmake/07/hello1/: hello1.h
cmake/07/hello2/: CMakeLists.txt  hello2.c
cmd_grep/: file
daemon/: .daemon_server.c.swp  a.out  daemon  daemon_server  daemon_server.c  main  run.sh  test  test.c
file/: README.md
file/file_add/: a.out  main.c  mcu_boot_app_merge.c
file/file_cfg_cnt/: a.out  read_write.c
file/file_dir/: dir_test.c
file/file_rw/: cfg_params.conf  file.c
file/file_seek/: file_seek.c
file/file_size/: file_size.c
file/test/: a.out  test.c
stdarg/: a.out  stdarg.c
uart/: a.out  mcu_uart_cmd.c  uart_pack.c  uart_pack.c_df  uart_pack_cmd.c
unix_domain/: client  server  server.c
unix_domain_df/: client  client.c  server  server.c
