cmake_minimum_required(VERSION 3.5)

PROJECT(hello)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

#设置交叉编译工具
SET(CMAKE_C_COMPILER ${CROSS_COMPILE}gcc)
SET(CMAKE_CXX_COMPILER ${CROSS_COMPILE}g++)

# include directories
INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}/hello1
  ${PROJECT_SOURCE_DIR}/hello2
)

# lib directories
LINK_DIRECTORIES(
  ${PROJECT_BINARY_DIR}/lib
)

#设置输出目录
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)


add_definitions(-DBOARD_TYPE_${BOARD}) 
add_definitions(-DVERSION_TYPE_${VERSION}) 

if (WIFI_SUPPORT)
	ADD_DEFINITIONS(-DWIFI_SUPPORT)
endif()


if (EMMC_SUPPORT)
	ADD_DEFINITIONS(-DEMMC_SUPPORT)
endif()


ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(hello1)
ADD_SUBDIRECTORY(hello2)
